# mddu_pattern_test

./: CMakeLists.txt  README.md  eth_client.py  mddu.puml
common/inc/: drive_routine.h  state_machine.h
common/src/: devices.c  state_machine.c
core/inc/: threads.h
core/src/: threads.c
device/inc/: uart_device.h
device/src/: eth_device.c  uart_device.c
inc/: devices.h  drive_routine.h  driver.h  eth_device.h  state_machine.h  threads.h  uart_device.h
src/: drive_routine.c  eth_device.c  main.c  state_machine.c
